pxc/tests/test_19_thread/thr5.px
import test_common "";

namespace ttest;
import thread "";
import io;

multithreaded struct my_thread_obj (io::ioptr iop) {
  int x;
  int y;
  io::ioptr io = iop;
  function void main() {
    io.stdout_println("my thread main");
    io.stdout_println(x);
    io.stdout_println(y);
  }
}

function void test1()
{
  io::ioptr i = io::ioptr(io::io()); // error: io is not default-constructible
  thread_t thr = create_thread(my_thread_obj(io::main));
  thr.join();
}

test1();

